--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -3,6 +3,8 @@
         <title>Monopoly Deal Game: {{ room }}</title>
         <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script type="text/javascript" charset="utf-8">
             var socket;
             $(document).ready(function(){
@@ -35,33 +37,63 @@
                     $('#game').scrollTop($('#game')[0].scrollHeight);
                 });
                 socket.on('prompt', function(data) {
-                    $('#action').val(data.msg);
+                    $('#game_input').text(data.msg);
                 });
                 $('#action').keypress(function(e) {
                     var code = e.keyCode || e.which;
                     if (code == 13) {
                         action = $('#action').val();
                         $('#action').val('');
-                        socket.emit('action', {msg: action.split(': ').pop()});
+                        socket.emit('action', {msg: action});
                     }});
             });
             function add_bot() {
                 socket.emit('add_bot', {});
             }
-            function player_ready() {
-                socket.emit('ready', {});
+            function start_game() {
+                socket.emit('start', {});
             }
 
 
         </script>
     </head>
     <body>
-        <h1>Monopoly Deal Game: {{ room }}</h1>
-        <button onclick="add_bot();">Add Robot Player</button><br><br>
-        <button onclick="player_ready();">Ready</button><br><br>
-        <textarea id="game" cols="100" rows="20"></textarea>
-        <textarea id="chat" cols="40" rows="20"></textarea><br><br>
-        <input id="action" size="100">
-        <input id="text" size="40"><br><br>
+        <div class="container">
+            <div class="row">
+                <h2>Monopoly Deal Game: {{ room }}</h2>
+            </div>
+            <div class="row">
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group mr-2" role="group" aria-label="First group">
+                        <button onclick="start_game();" class="btn btn-primary mb-2">Start Game</button>
+                    </div>
+                    <div class="btn-group mr-2" role="group" aria-label="Second group">
+                        <button onclick="add_bot();" class="btn btn-primary mb-2">Add Robot Player</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-8">
+                    <h4>Game Log</h4>
+                    <textarea class="form-control" id="game" cols="100" rows="25" readonly></textarea>
+                    <div class="input-group input-group-sm mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="game_input">Game Input</span>
+                        </div>
+                        <input id="action" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <h4>Chat Log</h4>
+                    <textarea class="form-control" id="chat" cols="40" rows="25" readonly></textarea>
+                    <div class="input-group input-group-sm mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="chat_input">Chat Input</span>
+                        </div>
+                        <input id="text" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
