--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -13,6 +13,7 @@
                 socket = io.connect(protocol + '//' + document.domain + ':' + location.port + '/game');
                 socket.on('connect', function() {
                     socket.emit('joined', {}); 
+                    $('#action').attr( "disabled", true);
                 });
 
                 // chat functionality
@@ -64,10 +65,11 @@
                 socket.emit('add_bot', {});
             }
             function start_game() {
+                $('#start_game').attr( "disabled", true);
+                $('#add_bots').attr( "disabled", true);
+                $('#invite').attr( "disabled", true);
                 socket.emit('start', {});
             }
-
-
         </script>
     </head>
     <body>
@@ -78,25 +80,25 @@
             <div class="row">
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                     <div class="btn-group mr-2" role="group" aria-label="First group">
-                        <button onclick="start_game();" class="btn btn-primary mb-2">Start Game</button>
+                        <button id="start_game" onclick="start_game();" class="btn btn-primary mb-2">Start Game</button>
                     </div>
                     <div class="btn-group mr-2" role="group" aria-label="Second group">
-                        <button onclick="add_bot();" class="btn btn-primary mb-2">Add Robot Player</button>
+                        <button id="add_bots" onclick="add_bot();" class="btn btn-primary mb-2">Add Robot Player</button>
                     </div>
                     <div class="btn-group mr-2" role="group" aria-label="Second group">
-                        <button type="button" class="btn btn-primary  mb-2" data-toggle="modal" data-target="#InviteModal">Invite Players</button>
+                        <button id="invite" type="button" class="btn btn-primary  mb-2" data-toggle="modal" data-target="#InviteModal">Invite Players</button>
+                    </div>
                 </div>
-            </div>
             <div class="row">
                 <div class="col-5">
                     <h4>Board</h4>
-                    <textarea class="form-control" id="board" cols="100" rows="25" readonly></textarea>
+                    <textarea class="form-control" id="board" cols="100" rows="23" readonly></textarea>
                 </div>
                 <div class="col-4">
                     <h4>Game Log</h4>
-                    <textarea class="form-control" id="game_log" cols="100" rows="8" readonly></textarea>
+                    <textarea class="form-control" id="game_log" cols="100" rows="7" readonly></textarea>
                     <h4>Player Inputs</h4>
-                    <textarea class="form-control" id="player_log" cols="100" rows="14" readonly></textarea>
+                    <textarea class="form-control" id="player_log" cols="100" rows="13" readonly></textarea>
                     <div class="input-group input-group-sm mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="player_input">Game Input</span>
@@ -106,7 +108,7 @@
                 </div>
                 <div class="col-2">
                     <h4>Chat Log</h4>
-                    <textarea class="form-control" id="chat" cols="30" rows="24" readonly></textarea>
+                    <textarea class="form-control" id="chat" cols="30" rows="22" readonly></textarea>
                     <div class="input-group input-group-sm mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="chat_input">Chat Input</span>
