--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -34,6 +34,12 @@
                 socket.on('game_ready', function(data) {
                     $('#start_game').attr( "disabled", false);
                 });
+                socket.on('game_started', function(data) {
+                    $('#start_game').attr( "disabled", true);
+                    $('#start_game').attr( "title", "");
+                    $('#add_bots').attr( "disabled", true);
+                    $('#invite').attr( "disabled", true);
+                });
                 socket.on('status', function(data) {
                     $('#game_log').val($('#game_log').val() + data.msg + '\n');
                     $('#game_log').scrollTop($('#game_log')[0].scrollHeight);
@@ -68,9 +74,6 @@
                 socket.emit('add_bot', {});
             }
             function start_game() {
-                $('#start_game').attr( "disabled", true);
-                $('#add_bots').attr( "disabled", true);
-                $('#invite').attr( "disabled", true);
                 socket.emit('start', {});
             }
         </script>
@@ -83,7 +86,7 @@
             <div class="row">
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                     <div class="btn-group mr-2" role="group" aria-label="First group">
-                        <button id="start_game" onclick="start_game();" class="btn btn-success mb-2" disabled>Start Game</button>
+                        <button id="start_game" onclick="start_game();" class="btn btn-success mb-2" disabled title="need at least 2 players to play">Start Game</button>
                     </div>
                     <div class="btn-group mr-2" role="group" aria-label="Second group">
                         <button id="add_bots" onclick="add_bot();" class="btn btn-primary mb-2">Add Robot Player</button>
