--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -97,7 +97,7 @@
             <div class="row">
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                     <div class="btn-group mr-2" role="group" aria-label="Second group">
-                        <button id="go_back" onclick="go_home();" class="btn btn-danger mb-2">Back</button>
+                        <button id="go_back" onclick="go_home();" class="btn btn-danger mb-2">Exit Game</button>
                     </div>
                     <div class="btn-group mr-2" role="group" aria-label="First group">
                         <button id="invite" type="button" class="btn btn-primary  mb-2" data-toggle="modal" data-target="#InviteModal">Invite Players</button>
