--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -35,8 +35,18 @@
                     $('#start_game').attr( "disabled", false);
                 });
                 socket.on('game_end', function(data) {
+                    $('#action').attr( "disabled", true);
                     $('#start_game').text("Play Again")
-                    $('#start_game').attr( "disabled", false);
+                    if (data.msg) {
+                        $('#add_bots').attr( "disabled", false);
+                        $('#invite').attr( "disabled", false);
+                        $('#start_game').attr( "disabled", false);
+                    }
+                    else {
+                        $('#start_game').attr( "disabled", true);
+                        $('#add_bots').attr( "disabled", false);
+                        $('#invite').attr( "disabled", false);
+                    }
                 });
                 socket.on('game_started', function(data) {
                     $('#game_log').val('');
@@ -83,7 +93,7 @@
             function start_game() {
                 socket.emit('start', {});
             }
-            function go_home()
+            function exit_game()
             {
                 window.location.href="/"
             }
@@ -97,7 +107,7 @@
             <div class="row">
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                     <div class="btn-group mr-2" role="group" aria-label="Second group">
-                        <button id="go_back" onclick="go_home();" class="btn btn-danger mb-2">Exit Game</button>
+                        <button id="go_back" onclick="exit_game();" class="btn btn-danger mb-2">Exit Game</button>
                     </div>
                     <div class="btn-group mr-2" role="group" aria-label="First group">
                         <button id="invite" type="button" class="btn btn-primary  mb-2" data-toggle="modal" data-target="#InviteModal">Invite Players</button>
